Changes for the Labyrinth-Plugin-Album

1.04	2013-02-10
        - added cover photo feature.
        - added config support for image and thmbnail sizes.
        - update field validation.
        - default lowered to PUBLISHER.
        - fixed hide gallery album.
        - allow deletion of archive photos from filesystem.
        - allow photos to be moved between albums.
        - now requires Labyrinth Core 5.14.
        - added LICENSE file.
        - added INSTALL file.

1.03	2013-01-06
        - aded hits dispatch and template files.
        - change file dates changed to meet W3CDTF standards.
        - updated test suite.
        - META tests no longer require specific versions.
        - added minimum perl version (5.006).
        - reworked Makefile.PL for clarity.

1.02	2012-01-25
	    - allow config settings of maxphotowidth & maxphotoheight for photos, 
	      and  maxthumbwidth & maxthumbheight for thumbnails.
	    - set a default of 0 for parentid.

1.01	2012-01-08
	    - check we have an accessible directory to store photos
	    - added missing modules in metadata provides.

1.00	2012-01-04
	    - first official release