@@ -63,7 +63,7 @@ the page.</p>
 [% END %]
 </table>
 
-<p class="smalltext"><input type="submit" value='Save Page' /></p>
+<p class="smalltext"><input type="submit" class="button" value='Save Page' /></p>
 </div>
 
 [% IF data.pageid %]
@@ -92,7 +92,7 @@ the page.</p>
 [% END %]
 </table>
 
-<p class="smalltext"><input type="submit" value='Save Page' /></p>
+<p class="smalltext"><input type="submit" class="button" value='Save Page' /></p>
 </div>
 
 <div class="boxer">
@@ -100,7 +100,7 @@ the page.</p>
     <p>Use the Browse button below to search your hard drive for photos you'd like to upload.
     Select one photo at a time, which will then appear in the file list box below. You can load up
     to 10 photos at a time in the file list box. When you have selected the photos you wish to
-    upload, click the Save Page button, and all the selected photos will be uploaded to this page.
+    upload, click the Save Page button, and all the selected photos will be uploaded to this page.</p>
     <script language="javascript" type="text/javascript" src="[% webpath %]/js/multifile.js"></script>
     <p><input id="FileUpload" type="file" name="file_0" /><br />
     <!-- This is where the output will appear -->
@@ -112,7 +112,7 @@ the page.</p>
         multi_selector.addElement( document.getElementById( 'FileUpload' ) );
     </script>
 
-<p class="smalltext"><input type="submit" value='Save Page' /></p>
+<p class="smalltext"><input type="submit" class="button" value='Save Page' /></p>
 </div>
 [% END %]
 
