@@ -16,7 +16,7 @@ gigs and stuff, with the occasional attempt at art. Well I try ;)</p>
     <input type="hidden" name="latest" value="0" />
 
     Search: <input type="text" name="metadata" value="" />
-    [% ddmonths %][% ddyears %] <input type="submit" value="GO" />
+    [% ddmonths %][% ddyears %] <input type="submit" class="gobutton" value="GO" />
     <p>
         <a href="[% cgipath %]/pages.cgi?act=album-main&amp;latest=1">Latest Updates</a>
     |   <a href="[% cgipath %]/pages.cgi?act=hits-pages">Top Galleries</a>
