@@ -59,7 +59,7 @@
 </div>
 
 <div class="boxer">
-<p class="smalltext"><input type=image src="[% webpath %]/images/icons/save.gif" alt="save page" /> - Save Page
+<p class="smalltext"><input type=image src="[% webpath %]/images/icons/save.gif" alt="save page" /> - Save Page</p>
 </div>
 
 </form>
