@@ -2,7 +2,7 @@
 
 <form method="post" action="[% cgipath %]/pages.cgi">
 <input type="hidden" name="act" value="album-pick" />
-<p>Meta Search <input type="text" name="searchmeta" /> <input type="submit" value="GO" />
+<p>Meta Search <input type="text" name="searchmeta" /> <input type="submit" class="gobutton" value="GO" />
 </form>
 
 <script type="text/javascript">
